[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/slime.png" type="Texture" id=1]
[ext_resource path="res://scripts/slimeAI.gd" type="Script" id=2]
[ext_resource path="res://assets/slimeSheen.png" type="Texture" id=3]
[ext_resource path="res://scripts/npc/slime/slimeSprite.gd" type="Script" id=4]

[sub_resource type="Shader" id=65]
code = "shader_type canvas_item;

uniform float squishAmount;
uniform vec2 resolution;


void fragment() {
    vec2 uv = UV;
  	float speed =3.0;
    // Calculate the pixel coordinates
    vec2 pixelSize = vec2(1.0) / resolution;
    vec2 pixelCoords = floor(uv / pixelSize) * pixelSize;

    // Calculate the squish factor
    float squishFactor = 1.0 + squishAmount*abs(sin(TIME*speed)) * (pixelCoords.y - 0.5);

    // Apply the squish factor to the pixel coordinates
    uv.x /= squishFactor;

    // Sample the texture using the modified UV coordinates
    COLOR = textureLod(TEXTURE, uv, 1.0);
//	COLOR = vec4(vec3(UV.x),1.0);
}"

[sub_resource type="ShaderMaterial" id=66]
shader = SubResource( 65 )
shader_param/squishAmount = 0.3
shader_param/resolution = Vector2( 32, 16 )

[sub_resource type="Shader" id=67]
code = "shader_type canvas_item;

uniform vec2 resolution = vec2(7,2);
uniform float custom_time;

void fragment(){
	vec2 uv = UV;
	
	vec2 pixelsize = 1.0/resolution;
	vec2 pixelcoordinate = UV/pixelsize;
//	pixelOffset = pixelOffset+floor(TIME*pixelsize.x);
	float pixelOffset = floor(TIME)*pixelsize.x;
	vec2 newuv=vec2(uv.x+pixelOffset,uv.y);
	COLOR = texture(TEXTURE,newuv);
	
	
}"

[sub_resource type="ShaderMaterial" id=68]
shader = SubResource( 67 )
shader_param/resolution = Vector2( 7, 2 )
shader_param/custom_time = null

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 12, 4 )

[node name="slime1" type="Node2D"]

[node name="slime" type="KinematicBody2D" parent="."]
position = Vector2( 119, 477 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="slimeSprite" type="Sprite" parent="slime"]
material = SubResource( 66 )
position = Vector2( 5, -4 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="sheen" type="Sprite" parent="slime/slimeSprite"]
material = SubResource( 68 )
position = Vector2( -7, 2 )
texture = ExtResource( 3 )

[node name="slimeCollider" type="CollisionShape2D" parent="slime"]
shape = SubResource( 50 )

[node name="pointA" type="Position2D" parent="."]
position = Vector2( 75, 479 )

[node name="pointB" type="Position2D" parent="."]
position = Vector2( 145, 479 )
